#1096 hide music-button if it's not used for the usecase